--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,19 +31,18 @@ header > section{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 13em;
+    height: 15em;
     background-color: #782221;
     align-items: center;
     padding: 1em 0 0 0;
 }
-section > img{
+section > a > img{
     width: 7em;
-    height: 7em;
-    margin: auto;
+    height: 8em;
     border-radius: 100%;
     box-shadow: -1px 0px 13px #c2b9b9;
 }
-section > img:hover{
+section > a >img:hover{
     cursor: zoom-in;
 }
 section > h2 , section > h1{
@@ -55,7 +54,7 @@ section > h2 , section > h1{
 section > h2{
     font-weight: 500;
     font-size: 1em;
-    margin: 0.5em 0 1em 0;
+    margin: 1.5em 0 1em 0;
 }
 
 address{    
@@ -90,8 +89,8 @@ main > article{
     padding: 0;
 }
 main > article p, main > article ul{
-    color: #dbc2a4;
-    font-weight: 600;
+    color: white;
+    font-weight: 300;
 }
 main > article > h3{
     background-color: #dbc2a4;
@@ -101,7 +100,7 @@ main > article > h3{
 }
 main > article > p{
     text-indent: 12%;
-    padding: 0 2em;
+    padding: 0px 3em 0 1em;
     text-align: justify;
 }
 section{
