--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,7 +123,7 @@ main > section > article:hover{
     border-right: 0.4em solid #782221;
     margin-right: 1em;
 }
-main li:hover{
+main > section > li:hover{
     border-right: 0.4em solid #782221;
     margin-right: 1em;
 }
@@ -137,10 +137,10 @@ footer{
     text-align: center;
     padding: 1em 0;
 }
-footer img{
+footer > img{
     cursor: pointer;
     width: 2em;
 }
-footer img:hover{
+footer > img:hover{
     opacity: 60%;
 }
