--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,7 +41,7 @@ header > section{
     height: 15em;
     background-color: #782221;
     align-items: center;
-    padding: 1em 0 0 0;
+    padding: 1em 0 1em 0;
 }
 section > a > img{
     width: 7em;
